--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <button onclick="addStudent()" class="menu-btn">➕ Add Student</button>
                 <button onclick="updateStudent()" class="menu-btn">✏️ Update Student</button>
                 <button onclick="deleteStudent()" class="menu-btn">🗑️ Delete Student</button>
+                <!-- NEW: Export/Import for TeraBox -->
+                <button onclick="exportData()" class="menu-btn">💾 Export Data (to TeraBox)</button>
+                <label for="importFile" class="menu-btn import-label">📁 Import Data (from TeraBox)</label>
+                <input type="file" id="importFile" accept=".json" style="display: none;" onchange="importData(event)">
             </aside>
 
             <!-- Center: Form and Table -->
@@ -72,23 +76,6 @@
             </main>
         </div>
     </div>
- <!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.13.1/firebase-database-compat.js"></script>
-<script>
-    // Your Firebase config (replace with yours)
-    const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_PROJECT.firebaseapp.com",
-        databaseURL: "https://YOUR_PROJECT-default-rtdb.firebaseio.com",
-        projectId: "YOUR_PROJECT_ID",
-        storageBucket: "YOUR_PROJECT.appspot.com",
-        messagingSenderId: "123456789",
-        appId: "YOUR_APP_ID"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-</script>
 
     <script src="script.js"></script>
 </body>
