--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Management App</title>
+    <title>Student Management App - TeraBox Storage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <!-- Top Navigation Bar -->
         <header class="header">
-            <h1 class="title">📖 Student Dashboard</h1>
+            <h1 class="title">📖 Student Dashboard (TeraBox Storage)</h1>
             <div class="search-container">
                 <input type="text" id="searchField" placeholder="Search by ID..." class="search-input">
                 <button onclick="searchStudent()" class="search-btn">🔍</button>
@@ -24,10 +24,17 @@
                 <button onclick="addStudent()" class="menu-btn">➕ Add Student</button>
                 <button onclick="updateStudent()" class="menu-btn">✏️ Update Student</button>
                 <button onclick="deleteStudent()" class="menu-btn">🗑️ Delete Student</button>
-                <!-- NEW: Export/Import for TeraBox -->
-                <button onclick="exportData()" class="menu-btn">💾 Export Data (to TeraBox)</button>
-                <label for="importFile" class="menu-btn import-label">📁 Import Data (from TeraBox)</label>
-                <input type="file" id="importFile" accept=".json" style="display: none;" onchange="importData(event)">
+                <!-- TeraBox-Only Storage -->
+                <div class="terabox-section">
+                    <h3 class="terabox-title">TeraBox Folder Storage</h3>
+                    <button onclick="exportData()" class="menu-btn">💾 Export JSON (Upload to TeraBox Folder)</button>
+                    <div class="import-link">
+                        <input type="text" id="teraLinkInput" placeholder="Paste TeraBox folder/file share link..." class="tera-link-input">
+                        <button onclick="importFromLink()" class="menu-btn small-btn">Import from Link</button>
+                    </div>
+                    <label for="importFile" class="menu-btn import-label">📁 Import JSON File (Download from TeraBox)</label>
+                    <input type="file" id="importFile" accept=".json" style="display: none;" onchange="importFromFile(event)">
+                </div>
             </aside>
 
             <!-- Center: Form and Table -->
@@ -36,23 +43,23 @@
                     <h2 class="form-title">Student Details</h2>
                     <div class="form-group">
                         <label for="nameField">Name</label>
-                        <input type="text" id="nameField" placeholder="XXXX">
+                        <input type="text" id="nameField" placeholder="Enter name">
                     </div>
                     <div class="form-group">
                         <label for="idField">ID</label>
-                        <input type="text" id="idField" placeholder="2022-01-001">
+                        <input type="text" id="idField" placeholder="e.g., 2022-01-001">
                     </div>
                     <div class="form-group">
                         <label for="deptField">Department</label>
-                        <input type="text" id="deptField" placeholder="XXX">
+                        <input type="text" id="deptField" placeholder="e.g., CSE">
                     </div>
                     <div class="form-group">
                         <label for="emailField">Email</label>
-                        <input type="text" id="emailField" placeholder="XXX@example.com">
+                        <input type="text" id="emailField" placeholder="e.g., student@example.com">
                     </div>
                     <div class="form-group">
                         <label for="cgpaField">CGPA</label>
-                        <input type="text" id="cgpaField" placeholder="3.75">
+                        <input type="text" id="cgpaField" placeholder="e.g., 3.75">
                     </div>
                 </div>
 
@@ -72,6 +79,7 @@
                             <!-- Rows populated by JS -->
                         </tbody>
                     </table>
+                    <p class="table-note">Data stored ONLY in TeraBox folder. Refresh loses data - import to restore.</p>
                 </div>
             </main>
         </div>
